--- a/css/main.css
+++ b/css/main.css
@@ -68,3 +68,48 @@ img {
 .image {
   width: 100px;
 }
+
+h2 {
+  text-align: left;
+  font-weight: bold;
+  font-size: 1rem;
+  margin: 0;
+}
+
+h3 {
+  text-align: left;
+  font-style: italic;
+  font-weight: normal;
+  font-size: .875rem;
+  margin: 0;
+}
+
+p {
+  text-align: left;
+  margin: 0 0 1.5rem;
+  flex-grow: 1;
+}
+
+.btn {
+  padding: .4em .75em .3em;
+  border-radius: 8px;
+  text-decoration: none;
+  text-align: left;
+  font-size: .875rem;
+  color: #fff;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #333;
+  display: inline-block;
+  width: 100%;
+  align-self: flex-end;
+}
+
+.btn-small {
+  background-color: #333;
+}
+
+.btn:hover {
+  background-color: #000;
+  border-color: #000;
+}
